--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stlye.css">
     <link rel="icon" href="./icons/Bella Olonje logo 111 1.png">
+    <link rel="stylesheet" href="./normalize.css">
     <title>Olonge</title>
 </head>
 
@@ -29,10 +30,10 @@
     </section>
 
     <div class="big-image">
-        <h3>Food app</h3>
+        <h3 data-text="Food app">Food app</h3>
         <h1>Why stay hungry when <br>
             you can order form Bella Onojie</h1>
-        <p>Download the bella onoje’s food app now on</p>
+        <p data-text2="Download the bella onoje’s food app now on">Download the bella onoje’s food app now on</p>
 
         <div class="big-image-btn">
             <button class="btn-red">Playstore</button>
@@ -57,38 +58,40 @@
         <h1>How the app works</h1>
 
 
-        <div class="first-ddiv">
-            <img src="./icons/phoneeee.png" alt="">
+        <div class="first-ddiv div-first">
+            <!-- <img src="./icons/phoneeee.png" alt=""> -->
 
             <div class="div-txt">
-                <h3>Create an account</h3>
+                <!-- <h3>Create an account</h3>
                 <h1>Create/login to an existing <br> account to get started</h1>
                 <p>An account is created with your email <br>
-                    and a desired password</p>
+                    and a desired password</p> -->
             </div>
         </div>
 
-        <div class="first-ddiv">
-            <div class="div-txt">
-                <h3>Explore varieties</h3>
+        <div class="first-ddiv div-second">
+            <div class="div-txt div-txt2">
+                <!-- <h3>Explore varieties</h3>
                 <h1>Shop for your favorites <br>
                     meal as e dey hot.</h1>
                 <p>Shop for your favorite meals or drinks <br>
-                    and enjoy while doing it.</p>
+                    and enjoy while doing it.</p> -->
             </div>
+            <div class="img-for-div">
+                <!-- <img src="./icons/phoneeee.png" alt=""> -->
 
-            <img src="./icons/phoneeee.png" alt="">
+            </div>
         </div>
 
-        <div class="first-ddiv">
-            <img src="./icons/phhohohene.png" alt="">
+        <div class="first-ddiv div-third">
+            <!-- <img src="./icons/phhohohene.png" alt=""> -->
 
-            <div class="div-txt">
-                <h3>Checkout</h3>
+            <div class="div-txt div-txt3">
+                <!-- <h3>Checkout</h3>
                 <h1>When you done check out <br>
                     and get it delivered.</h1>
                 <p>When you done check out and get it <br>
-                    delivered with ease.</p>
+                    delivered with ease.</p> -->
             </div>
         </div>
 
